Mockito_12/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Mockito_12_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Mockito_12/Mockito/evosuite/3/org/mockito/internal/util/reflection/GenericMaster_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Mockito_12/Mockito/evosuite/3/org/mockito/internal/util/reflection/GenericMaster_ESTest_scaffolding.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Mockito_12/Mockito/evosuite/3/org/mockito/internal/util/reflection/GenericMaster_ESTest.java:13: error: cannot find symbol
import org.mockito.internal.util.reflection.GenericMaster;
                                           ^
  symbol:   class GenericMaster
  location: package org.mockito.internal.util.reflection
/home/liumengjiao/Desktop/CI/Evosuite/Mockito_12/Mockito/evosuite/3/org/mockito/internal/util/reflection/GenericMaster_ESTest.java:20: error: cannot find symbol
      GenericMaster genericMaster0 = new GenericMaster();
      ^
  symbol:   class GenericMaster
  location: class GenericMaster_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Mockito_12/Mockito/evosuite/3/org/mockito/internal/util/reflection/GenericMaster_ESTest.java:20: error: cannot find symbol
      GenericMaster genericMaster0 = new GenericMaster();
                                         ^
  symbol:   class GenericMaster
  location: class GenericMaster_ESTest
3 errors
